--- a/Dockerfile-debian
+++ b/Dockerfile-debian
@@ -1,4 +1,4 @@
-FROM debian:buster-slim
+FROM debian:buster-slim as build
 
 RUN apt update && apt upgrade -y && apt install -y git make cmake build-essential libcurl4-openssl-dev pkg-config
 
@@ -15,6 +15,18 @@ WORKDIR /app/build
 RUN cmake ..
 RUN make -j $(nproc)
 
+
+FROM debian:buster-slim
+
+RUN apt update && apt upgrade -y && apt install -y build-essential libcurl4-openssl-dev
+
+COPY --from=build /app/build/docker-api-swagger /app/build/docker-api-swagger
+
+# COPY ./res /app/res
+COPY --from=build /app/res /app/res
+
+WORKDIR /app/build
+
 # EXPOSE 8001
 
-ENTRYPOINT ["./docker-api-swagger"]
+CMD ["./docker-api-swagger"]
