Console text color added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ add_library(${project_name}-lib
         src/dto/DTOs.hpp
         # src/utils/JSONUtils.hpp
         src/utils/HttpStatusUtils.hpp
+        src/utils/ColorUtils.hpp
         src/swagger/Resources.cpp
         src/swagger/Resources.hpp
         src/swagger/Types.cpp
