--- a/docker-compose-debian-buster.yaml
+++ b/docker-compose-debian-buster.yaml
@@ -4,15 +4,17 @@ services:
   docker-api-swagger:
     build:
       context: .
-      dockerfile: Dockerfile
-    image: docker-api-swagger:latest
+      dockerfile: Dockerfile-debian-buster
+      args:
+        - MAKE_PARALLEL_EXECUTION=ON  # ON/OFF
+    image: docker-api-swagger:debian-buster
     container_name: docker-api-swagger
     hostname: docker-api-swagger
     restart: always
     ports:
       - 8001:8001
     environment:
-      DOCKER_SERVER_IP: 192.168.88.8
+      DOCKER_SERVER_IP: 192.168.88.18
       DOCKER_SERVER_PORT: 2375
     networks:
       docker-api-swagger:
