--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -1,4 +1,4 @@
-FROM alpine:3.13 as build
+FROM alpine
 
 RUN apk update && apk upgrade && apk --no-cache add g++ git make cmake pkgconfig curl-dev
 
@@ -10,26 +10,3 @@ COPY ./utility /app/utility
 WORKDIR /app/utility
 
 RUN sh install-oatpp-modules.sh Release
-
-COPY ./src /app/src
-COPY ./CMakeLists.txt /app
-
-WORKDIR /app/build
-
-RUN cmake ..
-RUN make -j $(nproc)
-
-
-FROM alpine:3.13
-
-RUN apk update && apk upgrade && apk add g++
-
-COPY --from=build /app/build/docker-api-swagger /app/build/docker-api-swagger
-
-COPY ./res /app/res
-
-WORKDIR /app/build
-
-# EXPOSE 8001
-
-CMD ["./docker-api-swagger"]
