--- a/compose-alpine-prod.yaml
+++ b/compose-alpine-prod.yaml
@@ -2,28 +2,17 @@ services:
   docker-api-swagger-oatpp:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile-alpine-prod
       args:
         - MAKE_PARALLEL_EXECUTION=ON  # ON/OFF
-    image: docker-api-swagger-oatpp
+    image: docker-api-swagger-oatpp:alpine
     container_name: docker-api-swagger-oatpp
     hostname: docker-api-swagger-oatpp
-    # restart: unless-stopped
-    working_dir: /app/build
-    command: >
-      bash -c '
-        cmake &&
-        make -j $(nproc) &&
-        ./docker-api-swagger-oatpp
-      '
-    volumes:
-      - ./:/app
+    restart: always
     ports:
       - 8001:8001
-    # expose:
-      # - 8001
     environment:
-      DOCKER_SERVER_IP: 192.168.88.18
+      DOCKER_SERVER_IP: 192.168.88.8
       DOCKER_SERVER_PORT: 2375
     networks:
       docker-api-swagger-oatpp:
